// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should render 1`] = `
<div
  class="sc-kGXeez ehUfZi"
>
  <h1
    class="sc-bxivhb fSvbbt"
    color="#d5dcf9"
    data-testid="logo"
    size="80"
  >
    What Movie?
  </h1>
  <form
    class="sc-bdVaJa hjizjZ"
    data-testid="search-bar"
  >
    <input
      class="sc-bwzfXH jEOSHL"
      placeholder="Type the name of a movie"
      type="text"
      value=""
    />
    <button
      class="sc-htpNat dLCsyj"
      type="submit"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 512 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
    </button>
  </form>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Opening this week
    </h2>
    <div>
      Loading...
    </div>
    
  </div>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Top movies of 2020
    </h2>
    <div>
      Loading...
    </div>
    
  </div>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Top movies of last year
    </h2>
    <div>
      Loading...
    </div>
    
  </div>
</div>
`;

exports[`<App /> should render correctly 1`] = `
<div
  class="sc-kGXeez ehUfZi"
>
  <h1
    class="sc-bxivhb fSvbbt"
    color="#d5dcf9"
    data-testid="logo"
    size="80"
  >
    What Movie?
  </h1>
  <form
    class="sc-bdVaJa hjizjZ"
    data-testid="search-bar"
  >
    <input
      class="sc-bwzfXH jEOSHL"
      placeholder="Type the name of a movie"
      type="text"
      value=""
    />
    <button
      class="sc-htpNat dLCsyj"
      type="submit"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="24"
        size="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 512 512"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        />
      </svg>
    </button>
  </form>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Opening this week
    </h2>
    <div
      class="sc-kAzzGY gPTTjj"
      type="flex"
    >
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 1"
            src="https://image.tmdb.org/t/p/w1851.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 1
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 2"
            src="https://image.tmdb.org/t/p/w1852.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 2
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 3"
            src="https://image.tmdb.org/t/p/w1853.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 3
            </strong>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Top movies of 2020
    </h2>
    <div
      class="sc-kAzzGY gPTTjj"
      type="flex"
    >
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 1"
            src="https://image.tmdb.org/t/p/w1851.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 1
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 2"
            src="https://image.tmdb.org/t/p/w1852.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 2
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 3"
            src="https://image.tmdb.org/t/p/w1853.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 3
            </strong>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="sc-kgoBCf jANwOR"
  >
    <h2
      class="sc-chPdSV byfFmt"
    >
      Top movies of last year
    </h2>
    <div
      class="sc-kAzzGY gPTTjj"
      type="flex"
    >
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 1"
            src="https://image.tmdb.org/t/p/w1851.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 1
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 2"
            src="https://image.tmdb.org/t/p/w1852.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 2
            </strong>
          </div>
        </div>
      </div>
      <div
        class="sc-htoDjs kKAWrx"
      >
        <div
          class="sc-iwsKbI gCoABE"
        >
          /10
        </div>
        <div
          class="sc-cSHVUG cIcywD"
          data-testid="poster-img-container"
        >
          <img
            alt="Movie name test 3"
            src="https://image.tmdb.org/t/p/w1853.jpg"
          />
        </div>
        <div
          class="sc-gZMcBi FECGe"
        >
          <div
            class="sc-dnqmqq kabniG"
            data-testid="name-container"
          >
            <strong>
              Movie name test 3
            </strong>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
